[package]
name = "bevy_dragonbones"
version = "0.1.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"
exclude = [
    "./assets/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../bevy" }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
semver = { version = "0.11.0", features = ["serde"] }